arreglo archivo yaml 2

--- a/pythontest.tpl.yaml
+++ b/pythontest.tpl.yaml
@@ -35,7 +35,7 @@ spec:
       imagePullSecrets:
       - name: docker-registry
       containers:
-        - name: nginxtest
+        - name: pythontest
           imagePullPolicy: Always
           image: $DOCKERIMAGE
           ports:
